moar awesome work

--- a/mapsjs/routedemo/app.css
+++ b/mapsjs/routedemo/app.css
@@ -1,3 +1,7 @@
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .container {
     display: grid;
     grid-template-columns: 30% 70%;
@@ -6,4 +10,9 @@
 #map {
 	height: 100vh;
 	width: 100vw;
+}
+
+label {
+	display: inline-block; 
+	width: 150px; 
 }
